# 2d-game-tibia-like

./: .gitignore  Cargo.toml  rustfmt.toml  todos.md
.claude/: settings.local.json
assets/: basic-map.tmx  chars-tileset.tsx  grass-tileset.tsx  props-tileset.tsx  tibia-sprites.tsx
client/: Cargo.toml
client/src/: draw.rs  egui.rs  lib.rs  main.rs  movement.rs  object_interaction.rs  pathfinding.rs  player.rs  rendering.rs  tilesheet.rs  utils.rs
client/src/egui/: chat_window.rs
client/src/tasks/: tcp_reader.rs  udp_recv.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  player.rs  spawn_manager.rs
server/src/tasks/: game_loop.rs  sc_rx.rs  tcp_listener.rs  udp_recv.rs
shared/: Cargo.toml
shared/src/: constants.rs  game_objects.rs  lib.rs  logger.rs
shared/src/network/: sendable.rs  tcp.rs  udp.rs
src/: constants.rs  directions.rs  game_objects.rs  lib.rs  logger.rs  main.rs  server.rs  server_state.rs  tilesheet.rs  utils.rs
src/client/: constants.rs  egui.rs  mod.rs  movement.rs  object_interaction.rs  pathfinding.rs  player.rs  rendering.rs
src/client/egui/: chat_window.rs
src/client/tasks/: mod.rs  tcp_reader.rs  udp_recv.rs
src/network/: mod.rs  sendable.rs  sendable_sync.rs  tcp.rs  udp.rs
src/server/: constants.rs  mod.rs  player.rs
src/server/tasks/: game_loop.rs  mod.rs  sc_rx.rs  tcp_listener.rs  udp_recv.rs
