[package]
name = "game-macroquad-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
# macroquad = "0.4.13"
tiled = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
itertools = "0.14.0"
env_logger = "0.11.6"
log = "0.4.25"
egui-macroquad = { git = "https://github.com/0xDAEF0F/egui-macroquad", branch = "master" }

[profile.dev.package.'*']
opt-level = 3
