[workspace]
resolver = "2"
members = [
    "client",
    "server",
    "shared",
]

[workspace.dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
itertools = "0.14.0"
env_logger = "0.11.6"
log = "0.4.25"
chrono = "0.4.39"
tokio-stream = { version = "0.1.17", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
futures = "0.3.31"
tokio-util = { version = "0.7.13", features = ["codec", "net"] }
async-trait = "0.1.86"
rand = "0.8"

[profile.dev.package.'*']
opt-level = 3
