[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Client-specific dependencies
egui-macroquad = { git = "https://github.com/0xDAEF0F/egui-macroquad", branch = "master" }
tiled = "0.13.0"