[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
itertools = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# Shared-specific dependencies
tiled = "0.13.0"